src/objects/Attendee_Expense__c.object
<CustomObject>
    <description>This is an add on to the Event Approval application. This would be to track the expenses of any individual attendees that wish attend either a GSA sponsored conference or a Non GSA sponsored conference.</description>
    <fields>
        <fullName>Attendee__c</fullName>
        <label>Attendee</label>
        <referenceTo>Attendee__c</referenceTo>
        <relationshipLabel>Attendee Expenses</relationshipLabel>
        <relationshipName>Attendee_Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description_of_Other__c</fullName>
        <inlineHelpText>If you&apos;ve chosen &quot;Other&quot; as an expense category, please describe here.</inlineHelpText>
        <label>Description of Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Amount__c</fullName>
        <label>Estimated Amount</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Category__c</fullName>
        <label>Expense Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conference Registration Fee</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Lodging</fullName>
                </value>
                <value>
                    <fullName>Meals</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Exhibit Fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Detail__c</fullName>
        <label>Expense Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Expense_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>POV</fullName>
                </value>
                <value>
                    <fullName>Shuttle or Taxi</fullName>
                </value>
                <value>
                    <fullName>Rental Car</fullName>
                </value>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
                <value>
                    <fullName>Incidental</fullName>
                </value>
                <value>
                    <fullName>Per Diem</fullName>
                </value>
                <value>
                    <fullName>Booth Rental</fullName>
                </value>
                <value>
                    <fullName>Displays</fullName>
                </value>
                <value>
                    <fullName>Registration Fee</fullName>
                </value>
                <value>
                    <fullName>Taxes</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>gratuities</fullName>
                </value>
                <value>
                    <fullName>Room</fullName>
                </value>
                <value>
                    <fullName>Toll</fullName>
                </value>
                <value>
                    <fullName>Public Transit</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Exhibit Cost</fullName>
                </value>
                <value>
                    <fullName>Audio Visual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <inlineHelpText>If you are getting a rental car, a justification is needed in this field. You have 255 characters to enter this justification</inlineHelpText>
        <label>Justification</label>
        <type>TextArea</type>
    </fields>
    <label>Attendee Expense</label>
    <nameField>
        <displayFormat>Attendee Exp #-{0000000000}</displayFormat>
        <label>Attendee Expenses Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendee Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Estimated_Expenses_cannot_be_less_than_0</fullName>
        <active>true</active>
        <description>Will not allow a zero or negative value in the Estimated Amount field</description>
        <errorConditionFormula>Estimated_Amount__c  &lt; 0</errorConditionFormula>
        <errorMessage>Your Estimated Amount cannot be a negative amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expense_category_equals_other</fullName>
        <active>true</active>
        <description>For Event Approval Conference Attendee add on. This rule will make the &quot;Description of Other&quot; field required if the expense category = Other</description>
        <errorConditionFormula>AND(ISPICKVAL(  Expense_Category__c  , &quot;Other&quot;), 
ISBLANK( Description_of_Other__c ) )</errorConditionFormula>
        <errorDisplayField>Description_of_Other__c</errorDisplayField>
        <errorMessage>You must provide a description of why &quot;Other&quot; was chosen</errorMessage>
    </validationRules>
</CustomObject>